fix(TrackScreen): decrease mobile spacing

--- a/frontend/styles/tracks.module.scss
+++ b/frontend/styles/tracks.module.scss
@@ -24,11 +24,7 @@
   position: fixed;
   right: 30px;
   top: min(275px, 100vw);
-  transform:
-    translateY(-50%)
-    rotate(
-      283deg
-    );
+  transform: translateY(-50%) rotate(283deg);
   width: 40%;
 
   @include breakpoints.sm-up {
@@ -47,6 +43,10 @@
   margin-top: var(--margin-top);
 
   @include breakpoints.sm-up {
+    margin: var(--margin-top) 10% 0;
+  }
+
+  @include breakpoints.md-up {
     margin: var(--margin-top) 20% 0;
   }
 }
